# RustBoy

./: .gitignore  Cargo.toml
src/: main.rs
src/core/: chip8.rs  cpu.rs  keyboard.rs  renderer.rs  speaker.rs  tile.rs
